--- a/app/src/main/res/layout/li_item.xml
+++ b/app/src/main/res/layout/li_item.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_item"
+        android:id="@+id/text_view_value_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
